--- a/blocked.html
+++ b/blocked.html
@@ -11,7 +11,10 @@
 </head>
 <body>
     <h1>Access Denied</h1>
-    <p>You are not a pussy.</p>
-    <p>You are a man</p>
+    <p>This website is blocked by your admin.</p>
+    <p>You do not have access to this website or search</p>
+    <br>
+    <br>
+    Contact your admin. or report this as an issue at the <a href="https://github.com/iaco-byte/blocked">repository</a>
 </body>
 </html>
